BAEL-4409 : how to implement min-max heap in java